Updated readme. Now using 'overflow' instead of fixed position. Hidden menu scrollbar

--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,10 @@
+/**
+ *
+ * Do not edit this file as it would be overwritten when upgrading.
+ * Edit the custom theme instead.
+
+ */
+
 html,
 body {
 	margin: 0;
@@ -9,17 +16,38 @@ body {
 	box-sizing: border-box;
 }
 
+
+
+/*** MAIN ***/
 #main {
 	width: 900px;
+	width: 1200px;
 	height: 100%;
+}
+
+
+
+/*** MENU ***/
+#menu_wrapper {
+	width: 350px;
+	height: 100%;
+	overflow: hidden;
+	float: left;
 }
 
 #menu {
 	min-height: 100%;
 	padding: 20px;
 	width: 350px;
-	float: left;
-	padding-top: 240px;
+	/*float: left;*/
+	height: 100%;
+	/*padding-top: 240px;*/
+
+	/*overflow-y: auto;*/
+
+	height: 100%;
+	width: 368px;
+	overflow-y: scroll;
 }
 
 #menu ul > ul {
@@ -31,7 +59,7 @@ body {
 }
 
 #menu_top {
-	position: fixed;
+	/*position: fixed;*/
 	top: 0;
 	padding: 20px 0;
 	width: 310px;
@@ -39,22 +67,33 @@ body {
 	z-index: 9;
 }
 
+
+
+/*** MENU FOOTER ***/
+#menu footer {
+	margin-top: 2em;
+	font-size: 0.8em;
+}
+
 #logo,
 #search {
 	width: 100%;
 }
 
+
+/*** CONTENT ***/
 #content {
-	position: relative;
+	/*position: relative;*/
 	float: left;
 	width: 850px;
-	min-height: 100%;
-	padding-top: 60px;
+	/*min-height: 100%;*/
+	height: 100%;
+	/*padding-top: 60px;*/
 }
 
 #content_path {
 	width: 850px;
-	position: fixed;
+	/*position: fixed;*/
 	top: 0;
 	z-index: 9;
 }
@@ -71,11 +110,10 @@ body {
 }
 
 #file_content {
+	overflow-y: auto;
 	width: 850px;
-}
-
-footer {
-	clear: both;
+	height: 90%;
+	/*height: 500px;*/
 }
 
 
@@ -161,3 +199,4 @@ video {
 #content code.nobg {
 	background: none;
 }
+
